2010-07-19  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/fltk_backend.cc (plot_window::gui_mode):
	Use enum instead of int.  Change all uses.

2010-07-18  Kai Habel <kai.habel@gmx.de>

	* DLD-FUNCTIONS/fltk_backend.cc: Add mode for mouse rotation.
	(view2status): new function
	* src/graphics.cc: Remove limitations for zooming and translation.
	(axes::properties::rotate_view): new function

2010-07-17  Rik <octave@nomad.inbox5.com>

	* DLD-FUNCTIONS/balance.cc, DLD-FUNCTIONS/ccolamd.cc,
	  DLD-FUNCTIONS/cellfun.cc, DLD-FUNCTIONS/dasrt.cc,
	  DLD-FUNCTIONS/dmperm.cc, DLD-FUNCTIONS/eigs.cc, DLD-FUNCTIONS/qz.cc,
	  DLD-FUNCTIONS/rand.cc, DLD-FUNCTIONS/sparse.cc,
	  DLD-FUNCTIONS/sqrtm.cc, DLD-FUNCTIONS/symrcm.cc, dirfns.cc,
	  file-io.cc, syscalls.cc: Spellcheck documentation

2010-07-08  Rik <octave@nomad.inbox5.com>

	* DLD_FUNCTIONS/rand.cc: Correct typo in rande documentation.
	(bug #30446).

2010-07-13  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/cellfun.cc (mat2cell_mismatch, prepare_idx,
	do_mat2cell_2d, do_mat2cell_nd, do_mat2cell): New helper funcs.
	(Fmat2cell): Use them here.

2010-07-13  Jaroslav Hajek  <highegg@gmail.com>

	* data.cc (do_sparse_diff): Use typecasts where needed.

2010-07-12  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/rand.cc (do_rand): Pass the distribution name as an
	argument. Ensure restoration using unwind_protect.
	(Frand, Frandn, Frandg, Frandp, Frande): Update.

2010-07-12  Jaroslav Hajek  <highegg@gmail.com>

	* unwind-prot.h (unwind_protect::fcn_crefarg_elem): New class.
	(unwind_protect::add_fcn (void (*) (const T&), T)): New method
	overload.

2010-07-08  David Bateman  <dbateman@free.fr>

	* DLD-FUNCTIONS/__magick_read__,cc (F__magick_read__): Add the syntax
	__magick_read__ ("file", "frames", "all").

2010-07-08  Rik <octave@nomad.inbox5.com>

	* DLD_FUNCTIONS/eigs.cc: Initialize random number generator in test
	blocks to get reproducible results.

2010-07-08  Jaroslav Hajek  <highegg@gmail.com>
