@@ -1,3 +1,8 @@
+2010-07-19  Jaroslav Hajek  <highegg@gmail.com>
+
+	* data.cc (do_repelems): New helper func.
+	(Frepelems): New DEFUN.
+
 2010-07-19  John W. Eaton  <jwe@octave.org>
 
 	* DLD-FUNCTIONS/fltk_backend.cc (plot_window::gui_mode):
